# light-protocol-arcium-experiment

./: Anchor.toml  package-lock.json  package.json
battleship-fe/: .cta.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
battleship-fe/src/: main.tsx  routeTree.gen.ts
battleship-fe/src/circuits/: battleship.json
battleship-fe/src/components/: GameBoard.tsx  ShipPlacer.tsx  WalletButton.tsx
battleship-fe/src/idl/: battleship.json
battleship-fe/src/lib/: WalletProvider.tsx  gameStore.ts  multiplayer.ts  noir.ts  solana.ts  useGamePolling.ts
battleship-fe/src/routes/: __root.tsx  game.tsx  zk-demo.tsx
circuits/battleship/: Nargo.toml  Prover.toml
circuits/battleship/src/: main.nr
programs/battleship/: Cargo.toml
programs/battleship/src/: lib.rs
programs/zkcompress/: Cargo.toml
programs/zkcompress/src/: lib.rs
tests/: battleship.ts  zkcompress.ts
