[package]
name = "battleship"
version = "0.1.0"
description = "On-chain Battleship Game with Light Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "battleship"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-sdk = { version = "0.18.0", features = ["v2", "anchor"] }
light-sdk-types = { version = "0.18.0", features = ["v2", "anchor"] }
